# sc-gen-6

./: .cursorignore  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  LINUX_SETUP_GUIDE.md  Modelfile  README.md  agents.md  autostart_llama_server.bat  check_deps.py  check_gpu.py  clear_documents.py  download_model.py  fix_gpu_layers.py  found_models.txt  found_models_clean.txt  install_dependencies.bat  launch.py  linux_setup.sh  patch_reranker.py  pyproject.toml  requirements.txt  run.bat  run_server.bat  start_llama_background.bat  test_gpu.py  test_pipeline.py  throttled_download.py  update_llama.py  verify_assessment_pipeline.py
.claude/: settings.local.json
.cursor/: commands.json  settings.json
.cursor/rules/: document-types.mdc  llm-config.mdc  monitoring.mdc  project.mdc  rag-pipeline.mdc  testing.mdc  ui.mdc
cli/: __init__.py  answer.py  ingest.py  query.py
config/: chat_template_simple.jinja  config.yaml  llm_runtime.json  model_presets.json
docs/: CASE_GRAPH_DESIGN.md  GMKTEC-EVO-X2-SETUP.md  GPU_CONFIG_FIX.md  IMPLEMENTATION_PLAN.md  LLAMA_SERVER_SETUP.md  TECHNICAL_SPECS.md  ZERO_CHAR_BUG_DIAGNOSIS.md  local_llama_server.md
mcp_servers/local-tools/: README.md  requirements.txt  server.py
scripts/: check_llama_server.py  start_llama_logged.py  start_llama_server.bat
src/: __init__.py  config_loader.py  schema.py
src/analytics/: __init__.py  insight_generator.py  performance_logger.py
src/assessment/: assessment_collector.py  assessment_db.py  assessment_models.py  assessment_worker.py  cloud_evaluator.py  evaluation_prompts.py  suggestion_applicator.py  suggestion_parser.py
src/chat/: __init__.py  history.py
src/config/: api_key_manager.py  llm_config.py  runtime_store.py
src/documents/: __init__.py  catalog.py
src/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
src/generation/: __init__.py  background_task_manager.py  case_overview_generator.py  chunk_batcher.py  citation.py  document_renamer.py  prompts.py  (+3 more)
tests/: __init__.py  conftest.py  test_bm25_index.py  test_chunk_ids.py  test_chunkers.py  test_citation.py  test_config_loader.py  test_embedding_service.py  test_evaluation.py  test_hybrid_retriever.py  test_llm_service.py  test_parsers.py  test_rrf.py  test_runtime_store.py  test_vector_store.py  verify_imports.py
tools/: analyze_hyperlink.py  benchmark_query.py  check_extraction.py  debug_summaries.py  extract_graphs.py  fix_catalog_indexed.py  generate_summaries.py  migrate_bm25_to_fts5.py  reextract_graphs.py  test_batch_generation.py  test_llm_connection.py  test_ollama_parallel.py  test_optimizations.py  test_parallel.py  test_parallel_generation.py  test_truncation_quality.py
(+97 files in other folders)
